# moldeonet

./: .gitignore  .gitmodules  Makefile.am  buildpkg.sh  changelog  configure.ac  configure_osx.sh  control  control.amd64.11.10  debugmoldeocontrol.sh  meteor_install.sh  moldeo.desktop  moldeo.desktop.in  moldeo.in  moldeocontrol.bat  moldeocontrol.in  moldeocontrol.sh  moldeocontrol_export.bat  moldeocontrol_export_git.bat  moldeometeor.sh  moldeonet.dirs  moldeonet.install  node-webkit_install.sh  node-webkit_install_32.sh  node-webkit_install_64.sh  node-webkit_install_64_nw0.12.3.sh  node-webkit_install_arm.sh  node-webkit_install_osx.sh  node-webkit_install_osx_12.6.3_Monterrey.sh  npminstall.bat  package.moldeocontrol.json  pkg.sh  start_node.sh  stop_node.sh
MoldeoControl/: Makefile.am  MoldeoBrowser.html  MoldeoControl.html  MoldeoControl.js  MoldeoObjects.js  MoldeoOscApi.js  MoldeoPlayer.html  MoldeoPreferences.html  MoldeoRender.html  MoldeoSynchronizer.html  TODO.txt  app.js  browser.js  config.init.js  config.js  moldeo.js  moldeocontrol.xcf  moldeocontrols.css  package.json  server.js  synchronizer.js  tools.js  translations.js
MoldeoControl/css/: jquery.jscrollpane.css  tinyscrollbar.css
MoldeoControl/js/: bootstrap-treeview.js  d3_tree_navigator.js
MoldeoControl/lib/: png2sprite.py
MomoJamAnalizer/: MomoJamAnalizer-3.0.pde  MomoJamAnalizer.pde
moldeometeor/: package.json
moldeometeor/.meteor/: .id  versions
moldeometeor/client/: header.html  main.html  main.js  todos-list.html
moldeometeor/imports/api/: tasks.js
moldeometeor/imports/components/controlsList/: controls-list.html
moldeometeor/imports/components/todosList/: todos-list.html  todosList.html  todosList.js  todosList.js.x  todosList.js.zt
moldeometeor/server/: main.js
moldeonet/MoldeoControl/: MoldeoControl.html  MoldeoControl.js  app.js  config.js  moldeocontrols.css  tools.js
moldeonode/: package.json  server.js
moldeonode/public/: core.js  faces.html  index.html  main.css
moldeonode/public/js/: faces.js  joystick_view.js
utils/: findothers.sh  hello.sh  i2ctest.sh  install_accesspoint.sh  install_texttospeech.sh  installi2c.sh  installmjpegstreamer.sh  installraspicamv4l2.sh  reversemesa.sh  speakgirondo.sh  start_accesspoint.sh  start_bodydetection.sh  start_facedetection.sh  start_facerecognition.sh  start_mjpg_streamer.sh  start_wifi.sh  stop_facedetection.sh  stop_mjpg_streamer.sh  testmoldeocam.sh  testmoldeofacedetection.sh  testmoldeomix.sh  testpicospeak.sh  testraspicamv4l2.sh  testraspicamv4l2stream.sh  testraspicamv4l2streamremote.sh  testsound.sh  teststreaming.sh  teststreamingreceiving.sh
utils/molduino/: advance-speed.sh  advance.sh  collisiondetection.sh  i2ccheck.sh  linefollower.sh  readi2c.py  readsensors.sh  reverse-speed.sh  reverse.sh  stop.sh  stopa.sh  stopall.sh  turn-left-speed.sh  turn-left.sh  turn-right-speed.sh  turn-right.sh  turn.sh
utils/wireless/: dhcpd.conf  hostapd  hostapd.conf  interfaces
