ACLOCAL_AMFLAGS=-I m4

datadir = ${prefix}/share/moldeo/data
modulesdir = ${exec_prefix}/lib/moldeo

moldeocontroldir = ${prefix}/share/moldeonet/moldeocontrol
artdir = ${moldeocontroldir}/art
buttonsdir = ${moldeocontroldir}/buttons
cssdir = ${moldeocontroldir}/css
fontsdir = ${moldeocontroldir}/fonts
imagesdir = ${moldeocontroldir}/images
jsdir  = ${moldeocontroldir}/js
jsd3masterdir = ${moldeocontroldir}/js/d3-master
mlibdir = ${moldeocontroldir}/lib
#nodemodulesdir = ${moldeocontroldir}/node_modules
#npmmd5nodedir = ${nodemodulesdir}/md5-node
#npmmomentdir = ${nodemodulesdir}/moment

#npmosenvdir = ${nodemodulesdir}/osenv
#npmosenvnmdir = ${npmosenvdir}/node_modules
#npmosenvnmostmpdir = ${npmosenvnmdir}/os-tmpdir/
#npmosenvnmoshomedir = ${npmosenvnmdir}/os-homedir/

#npmoscnodedir = ${nodemodulesdir}/node-osc
#npmoscnodelibdir = ${npmoscnodedir}/lib
#npmoscnodenmdir = ${npmoscnodedir}/node_modules
#npmoscnodenmoscmindir = ${npmoscnodenmdir}/osc-min
#npmoscnodenmoscminnmdir = ${npmoscnodenmoscmindir}/node_modules
#npmoscnodenmoscminnmbinpackdir = ${npmoscnodenmoscmindir}/node_modules/binpack
#npmoscnodenmoscminlibdir = ${npmoscnodenmoscmindir}/lib
#npmoscnodenmjspackdir = ${npmoscnodenmdir}/jspack

dist_moldeocontrol_DATA = *.*
dist_art_DATA = art/*.*
dist_buttons_DATA = buttons/*.*
dist_css_DATA = css/*.*
dist_fonts_DATA = fonts/*.*
dist_images_DATA = images/*.*
dist_js_DATA = js/*.*
dist_jsd3master_DATA = js/d3-master/*.*
dist_mlib_DATA = lib/*.*
dist_nodemodules_DATA =

#dist_npmmd5node_DATA = node_modules/md5-node/*.*
#dist_npmmoment_DATA = node_modules/moment/*.*

#dist_npmosenv_DATA = node_modules/osenv/*.*
#dist_npmosenvnm_DATA = 
#dist_npmosenvnmostmp_DATA = node_modules/osenv/node_modules/os-tmpdir/*.*
#dist_npmosenvnmoshome_DATA = node_modules/osenv/node_modules/os-homedir/*.*

#dist_npmoscnode_DATA = node_modules/node-osc/*.*
#dist_npmoscnodelib_DATA = node_modules/node-osc/lib/*.*
#dist_npmoscnodenm_DATA = 
#dist_npmoscnodenmoscmin_DATA = node_modules/node-osc/node_modules/osc-min/*.*
#dist_npmoscnodenmjspack_DATA = node_modules/node-osc/node_modules/jspack/*.*
#dist_npmoscnodenmoscminnm_DATA = 
#dist_npmoscnodenmoscminlib_DATA = node_modules/node-osc/node_modules/osc-min/lib/*.*
#dist_npmoscnodenmoscminnmbinpack_DATA = node_modules/node-osc/node_modules/osc-min/node_modules/binpack/*.*


METASOURCES = AUTO
