ACLOCAL_AMFLAGS=-I m4

datadir = ${prefix}/share/moldeo/data
modulesdir = ${exec_prefix}/lib/moldeo

moldeocontroldir = ${prefix}/share/moldeonet/moldeocontrol
artdir = ${moldeocontroldir}/art
buttonsdir = ${moldeocontroldir}/buttons
cssdir = ${moldeocontroldir}/css
fontsdir = ${moldeocontroldir}/fonts
imagesdir = ${moldeocontroldir}/images
jsdir  = ${moldeocontroldir}/js
jsd3masterdir = ${moldeocontroldir}/js/d3-master
mlibdir = ${moldeocontroldir}/lib


dist_moldeocontrol_DATA = *.*
dist_art_DATA = art/*.*
dist_buttons_DATA = buttons/*.*
dist_css_DATA = css/*.*
dist_fonts_DATA = fonts/*.*
dist_images_DATA = images/*.*
dist_js_DATA = js/*.*
dist_jsd3master_DATA = js/d3-master/*.*
dist_mlib_DATA = lib/*.*

METASOURCES = AUTO
